2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: adhere to LineStyle.None for polygons

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Feature.cs, Data/Shapefile/Shapefile.cs: remove Feature.Id

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* WellKnownText.cs, Data/WellKnownText.cs, Cumberland.csproj: move WKT
	  int Data ns

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Data/Shapefile/DBaseIIIFile.cs: properly handle logical booleans

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Data/Shapefile/DBaseIIIFile.cs: allow null values in dbf

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs, Map.cs, Line.cs, Point.cs, AssemblyInfo.cs, Ring.cs,
	  Style.cs, Data/IFeatureSource.cs, Cumberland.csproj,
	  Projection/SphericalMercatorProjector.cs: cleanup

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Polygon.cs, PolyLine.cs, Data/Shapefile/Shapefile.cs: api clean up

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Map.cs, Data/IFeatureSource.cs: remove Extents from interface
	* Xml/Serialization/MapSerializer.cs, Data/IDatabaseFeatureSource.cs:
	  add ability to use subqueries

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: clean up
	* Xml/Serialization/MapSerializer.cs: add map version property

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: switch to graphicspath for polygons
	* Xml/Serialization/MapSerializer.cs: allow saving simple features in
	  maps

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* proj.README.TXT, docs, docs/proj.README.TXT, docs/README.txt,
	  Cumberland.csproj: move stuff around
	* AssemblyInfo.cs: set version

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 
